# plmembedder

./: .gitignore  README.md  __init__.py  __main__.py  pyproject.toml  setup.py
src/plmembedder/: cache.py  config.py  pipeline.py
src/plmembedder/decoy/: __init__.py  generator.py
src/plmembedder/embedders/: __init__.py  base.py  esm_embedder.py  protbert_embedder.py  prott5_embedder.py
src/plmembedder/io/: __init__.py  fasta_parser.py
